tests/fixtures/lua54/errors/bare_require/input/something.lua
print("something loaded")

return { loaded = true }
